# booking_perception_hym

./: .gitignore  README.md  pyproject.toml
data/: data_description.md
data/results/: analisis_general.csv  analisis_por_grupo.csv  model_results.csv
docs/methodology/: booking_perception_data_governance.md  booking_perception_data_pipeline_design.md  booking_perception_methodology.md
docs/roles/: booking_perception_roles.md
docs/tools_and_environment/: booking_perception_tools.md
models/: kmeans_model.pkl  label_encoder.pkl  vectorizer.pkl
notebooks/: booking_perception_notebooks_guide.md
project_management/: booking_perception_project_plan.md  booking_perception_risk_assessment.md  booking_perception_stakeholder_analysis.md
reports/data_quality/: data_quality.md  data_validation.md
reports/executive_summary/: executive_summary.md  key_findings.md
reports/model_evaluation/: model_evaluation.md
src/: analyze_data.py  booking_perception_code_guidelines.md  clean_data.py  load_data.py  main.py  train_models.py
