[tool.poetry]
name = "booking-perception-hym"
version = "0.1.0"
description = "Gerencia de Proyectos para Ciencia de Datos"
authors = ["Michel221212 <mlarrota1287@universidadean.edu.co>"]
readme = "README.md"
packages = [{include = "booking_perception_hym"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.3"
tabulate = "^0.9.0"
click = "^8.1.8" 
joblib = "^1.4.2" 
nltk = "^3.9.1" 
regex = "^2024.11.6" 
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
tensorflow = "^2.18.0" 
xgboost = "^2.1.4" 
spacy = "^3.8.4"  
imbalanced-learn = "^0.13.0"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
swifter = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
